# otta

./: .gitignore  README.md  main.py  plot.py  pyproject.toml
src/: data.py  utils.py
src/adaptations/: __init__.py  cotta.py  util.py
src/data/: __init__.py  cifar10.py  cifar100.py
